--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holy Grail Layout</title>
+    <title>MEUS HOBBYS</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="jogos.html">
 </head>
 <body>
     <header><h1>Meus Hobbys</h1></header>
     <div class="hg-conteudo">
-        <main class="foto1">
+        <main>
             <a href="https://www.netshoes.com.br/blog/esportes/post/o-que-e-bodyboard"><img src="img/381279294_1732003897242564_1682061727770980193_n.jpg" alt=""></a>
+            <p>Surfar</p>
         </main>
-        <main class="foto2">
+        <main>
             <a href="https://github.com/ermogenes/aulas-programacao-web"><img src="img/istockphoto-1224500457-170667a.jpg" alt=""></a>
+            <p>Programar</p>
         </main>
         <main>
             <a href="jogos.html"><img src="img/GettyImages-1097026358_thumb.webp" alt=""></a>
+            <p>Jogar</p>
         </main>
-
     </div>
-    <footer>Rodapé</footer>
+    <footer></footer>
 </body>
 </html>
